--- a/pages/html/ch1-2-2.html
+++ b/pages/html/ch1-2-2.html
@@ -30,11 +30,11 @@
     <main>
       <article>
         <h1>Тег &lt;title>, заголовки &lt;h1> – &lt;h6>.</h1><hr>
-        <p>Теги &lt;title>, а также заголовки от &lt;h1> до &lt;h6>, играют важную роль в структуре HTML-документа и организации контента на странице. Эти элементы не только влияют на визуальное отображение страницы, но также важны для SEO и доступности контента. Давай детально разберём, что о них нужно знать.</p>
+        <p>Теги <code>&lt;title></code>, а также заголовки от <code>&lt;h1> до &lt;h6></code>, играют важную роль в структуре HTML-документа и организации контента на странице. Эти элементы не только влияют на визуальное отображение страницы, но также важны для SEO и доступности контента. Давай детально разберём, что о них нужно знать.</p>
         <ol>
           <li><strong>Тег <code>&lt;title></code></strong></li>
           <p><strong>Основные функции:</strong></p>
-          <p>Тег &lt;title> — это обязательный элемент внутри &lt;head> раздела HTML-документа. Он задаёт заголовок страницы, который отображается:</p>
+          <p>Тег <code>&lt;title></code> — это обязательный элемент внутри <code>&lt;head></code> раздела HTML-документа. Он задаёт заголовок страницы, который отображается в:</p>
           <ul>
             <li>Вкладке браузера.</li>
             <li>Закладках, если пользователь добавляет сайт в избранное.</li>
@@ -162,12 +162,6 @@
           <p>Тег <code>&lt;title></code> и заголовки <code>&lt;h1></code> – <code>&lt;h6></code> выполняют важную функцию как для структуры страницы, так и для её SEO и доступности. Тег <code>&lt;title></code> помогает пользователю и поисковым системам понять основное назначение страницы, тогда как заголовки структурируют контент, делая его удобным для чтения и навигации.</p>
           <p>Важно использовать эти теги правильно, чтобы они работали на благо пользователя и улучшали ранжирование сайта в поисковых системах.</p>
         </ol>
-        
-
-       
-
-
-
       </article>
     </main>
 
