--- a/pages/html/ch10-1-1.html
+++ b/pages/html/ch10-1-1.html
@@ -40,8 +40,12 @@
     &lt;html lang="en">
       &lt;head>
         &lt;meta charset="UTF-8">
+        &lt;link rel="shortcut icon" href="/images/image.jpg" type="image/x-icon">
         &lt;meta name="viewport" content="width=device-width, initial-scale=1.0">
+        &lt;meta name="description" content="Описание страницы для поисковиков">
         &lt;title>My First Webpage&lt;/title>
+        &lt;link rel="stylesheet" href="/styles/styles.css">
+        &lt;script src="/script/script.js" defer>&lt;/script>
       &lt;/head>
       &lt;body>
         &lt;h1>Hello, World!&lt;/h1>
@@ -50,6 +54,25 @@
     &lt;/html>
   </code>
 </pre>
+        </details>
+
+        <details>
+          <summary>Теги HTML</summary>
+          <code class="lang-html">&lt;br&gt;</code> - перенос на другую строку <br>
+          <code class="lang-html">&lt;hr&gt;</code> - делает разделяющую полосу <br>
+          <code class="lang-html">&lt;em&gt;</code> - <em>курсив</em> <br>
+          <code class="lang-html">&lt;strong&gt;</code> - <strong>жирнит текст</strong> <br>
+          <code class="lang-html">&lt;i&gt;</code> - <i>Italic text</i> <br>
+          <code class="lang-html">&lt;mark&gt;</code> - <mark>Marked text</mark> <br>
+          <code class="lang-html">&lt;small&gt;</code> - <small>Smaller text</small> <br>
+          <code class="lang-html">&lt;del&gt;</code> - <del>Deleted text</del> <br>
+          <code class="lang-html">&lt;ins&gt;</code> - <ins>Inserted text</ins> <br>
+          <code class="lang-html">&lt;sub&gt;</code> - <sub>Subscript text</sub> <br>
+          <code class="lang-html">&lt;sup&gt;</code> - <sup>Superscript text</sup> <br>
+          <code class="lang-html">&lt;u&gt;</code> - <u>подчёркивает</u> текст <br>
+          <code class="lang-html">&lt;blockquote&gt;</code> - цитирование <br>
+          <code class="lang-html">&lt;abbr&gt;</code> - аббревиатура. Пример: Мы используем <abbr title="Hypertext Markup Language">HTML</abbr> для структурирования наших веб-документов. <br>
+          <code class="lang-html">&lt;address&gt;</code> - элемент разметки контактных данных. 
         </details>
         
 
