--- a/pages/html/ch2-1-1.html
+++ b/pages/html/ch2-1-1.html
@@ -60,7 +60,9 @@
         <p><strong>Пример использования:</strong></p>
 <pre>
   <code class="lang-html">
-    &lt;p>Это текст с &lt;br>переносом строки. &lt;br>Вместо создания нового абзаца, текст просто переходит на новую строку.&lt;/p>
+    &lt;p>Это текст с &lt;br>
+       переносом строки. &lt;br>
+       Вместо создания нового абзаца, текст просто переходит на новую строку.&lt;/p>
   </code>
 </pre>
         <p><strong>Важные аспекты:</strong></p>
@@ -71,7 +73,9 @@
         <p>Пример использования <code>&lt;br></code>:</p>
 <pre>
   <code class="lang-html">
-    &lt;p>Ваш адрес:&lt;br>Улица Пушкина, дом Колотушкина&lt;br>Город Москва, Россия&lt;/p>
+    &lt;p>Ваш адрес:&lt;br>
+       Улица Пушкина, дом Колотушкина&lt;br>
+       Город Москва, Россия&lt;/p>
   </code>
 </pre>
         <p>Тут перенос строки помогает разделить элементы адреса на отдельные строки.</p>
