--- a/pages/html/ch2-2-2.html
+++ b/pages/html/ch2-2-2.html
@@ -36,7 +36,7 @@
         <p><strong>Пример использования:</strong></p>
 <pre>
   <code class="lang-html">
-    &lt;p>Не забудьте &lt;strong>предоставить документы&lt;/strong> до конца дня!&lt;/p>
+    &lt;p>Не забудьте &lt;strong><strong>предоставить документы</strong>&lt;/strong> до конца дня!&lt;/p>
   </code>
 </pre>
         <p><strong>Важные аспекты:</strong></p>
@@ -47,13 +47,13 @@
         <p><strong>Пример с CSS:</strong></p>
 <pre>
   <code class="lang-html">
-    &lt;p>Не забудьте &lt;strong>предоставить документы&lt;/strong> до конца дня!&lt;/p>
+    &lt;p>Не забудьте &lt;strong><strong>предоставить документы</strong>&lt;/strong> до конца дня!&lt;/p>
 
     &lt;style>
-    strong {
-      font-weight: normal;
-      color: red;
-    }
+      strong {
+        font-weight: normal;
+        color: red;
+      }
     &lt;/style>
   </code>
 </pre>
@@ -63,7 +63,7 @@
         <p><strong>Пример использования:</strong></p>
 <pre>
   <code class="lang-html">
-    &lt;p>Я думаю, что это &lt;em>действительно&lt;/em> важно.&lt;/p>
+    &lt;p>Я думаю, что это &lt;em><em>действительно</em>&lt;/em> важно.&lt;/p>
   </code>
 </pre>
         <p><strong>Важные аспекты:</strong></p>
@@ -77,10 +77,10 @@
     &lt;p>Я думаю, что это &lt;em>действительно&lt;/em> важно.&lt;/p>
 
     &lt;style>
-    em {
-      font-style: normal;
-      text-decoration: underline;
-    }
+      em {
+        font-style: normal;
+        text-decoration: underline;
+      }
     &lt;/style>
   </code>
 </pre>
@@ -106,11 +106,11 @@
         <p><strong>Пример:</strong></p>
 <pre>
   <code class="lang-html">
-    &lt;p>&lt;strong>Это предложение&lt;/strong> &lt;em>действительно важно&lt;/em>.&lt;/p>
+    &lt;p>&lt;strong><strong>Это предложение</strong>&lt;/strong> &lt;em><em>действительно важно</em>&lt;/em>.&lt;/p>
   </code>
 </pre>
         <p>В этом примере браузер делает первый фрагмент жирным (выражая важность), а второй — курсивным (подчёркивая акцент).</p>
-        <h3>Лучшие практики использования &lt;strong> и &lt;em>&lt;/em></h3>
+        <h3>Лучшие практики использования &lt;strong> и &lt;em></h3>
         <ol>
           <li><strong>Используй для смысла, а не для стиля</strong>: Если тебе нужно просто сделать текст жирным или курсивным для визуального оформления, лучше использовать CSS с тегами <code>&lt;b></code> или <code>&lt;i></code>. Теги <code>&lt;strong></code> и <code>&lt;em></code> лучше использовать для выделения по смыслу.</li>
           <li><strong>Улучшение доступности</strong>: Программы для чтения с экрана распознают теги <code>&lt;strong></code> и <code>&lt;em></code>, помогая пользователям с особыми потребностями лучше воспринимать структуру и содержание страницы.</li>
@@ -135,10 +135,6 @@
 </pre>
         <p><strong>Заключение</strong></p>
         <p>Теги <code>&lt;strong></code> и <code>&lt;em></code> — это мощные инструменты для выделения важных частей текста с акцентом на семантике и смысле, а не просто на визуальном оформлении. Они помогают улучшить доступность контента и делают текст более понятным для поисковых систем.</p>
-       
-
-
-
       </article>
     </main>
 
