--- a/pages/html/html_tags.html
+++ b/pages/html/html_tags.html
@@ -39,7 +39,7 @@
         </p>
 
         <p>
-          <code>&lt;hr&gt;</code> - делает разделяющую строку
+          <code>&lt;hr&gt;</code> - делает разделяющую полосу
         </p>
 
         <p>
