--- a/pages/html/ch2-2-1.html
+++ b/pages/html/ch2-2-1.html
@@ -37,8 +37,8 @@
         <h3>1. Тег &lt;b&gt; — Жирный текст</h3>
         <p>Тег <code>&lt;b&gt;</code> делает текст жирным (<em>bold</em>), выделяя его визуально. Он используется, когда нужно подчеркнуть отдельные слова или фразы без особого семантического значения.</p>
 <pre>
-  <code>
-    &lt;p&gt;Этот текст &lt;b&gt;жирный&lt;/b&gt;, а этот — обычный.&lt;/p&gt;
+  <code class="lang-html">
+    &lt;p&gt;Этот текст &lt;b&gt;<b>жирный</b>&lt;/b&gt;, а этот — обычный.&lt;/p&gt;
   </code>
 </pre>
 
@@ -51,8 +51,8 @@
         <h3>2. Тег &lt;i&gt; — Курсивный текст</h3>
         <p>Тег <code>&lt;i&gt;</code> делает текст наклонным (курсивом). Он часто используется для выделения иностранных слов, названий книг, терминов или другой информации.</p>
 <pre>
-  <code>
-    &lt;p&gt;Название книги — &lt;i&gt;Преступление и наказание&lt;/i&gt;.&lt;/p&gt;
+  <code class="lang-html">
+    &lt;p&gt;Название книги — &lt;i&gt;<i>Преступление и наказание</i>&lt;/i&gt;.&lt;/p&gt;
   </code>
 </pre>
 
@@ -65,8 +65,8 @@
         <h3>3. Тег &lt;u&gt; — Подчёркнутый текст</h3>
         <p>Тег <code>&lt;u&gt;</code> делает текст подчёркнутым. Этот тег редко используется в современных веб-стандартах, так как подчёркивание часто ассоциируется с гиперссылками.</p>
 <pre>
-  <code>
-    &lt;p&gt;Этот текст &lt;u&gt;подчёркнут&lt;/u&gt;, а этот — обычный.&lt;/p&gt;
+  <code class="lang-html">
+    &lt;p&gt;Этот текст &lt;u&gt;<u>подчёркнут</u>&lt;/u&gt;, а этот — обычный.&lt;/p&gt;
   </code>
 </pre>
 
@@ -79,8 +79,8 @@
         <h3>4. Тег &lt;s&gt; — Зачёркнутый текст</h3>
         <p>Тег <code>&lt;s&gt;</code> делает текст зачёркнутым, показывая, что информация устарела или больше не актуальна.</p>
 <pre>
-  <code>
-    &lt;p&gt;Стоимость товара — &lt;s&gt;5000 руб.&lt;/s&gt; Теперь всего 4000 руб.&lt;/p&gt;
+  <code class="lang-html">
+    &lt;p&gt;Стоимость товара — &lt;s&gt;<s>5000 руб.</s>&lt;/s&gt; Теперь всего 4000 руб.&lt;/p&gt;
   </code>
 </pre>
 
@@ -92,8 +92,8 @@
 
         <h4>Примеры использования всех тегов вместе:</h4>
 <pre>
-  <code>
-    &lt;p&gt;Эта фраза содержит &lt;b&gt;жирный&lt;/b&gt;, &lt;i&gt;курсивный&lt;/i&gt;, &lt;u&gt;подчёркнутый&lt;/u&gt;, и &lt;s&gt;зачёркнутый&lt;/s&gt; текст.&lt;/p&gt;
+  <code class="lang-html">
+    &lt;p&gt;Эта фраза содержит &lt;b&gt;<b>жирный</b>&lt;/b&gt;, &lt;i&gt;<i>курсивный</i>&lt;/i&gt;, &lt;u&gt;<u>подчёркнутый</u>&lt;/u&gt;, и &lt;s&gt;<s>зачёркнутый</s>&lt;/s&gt; текст.&lt;/p&gt;
   </code>
 </pre>
         <h3>Когда использовать каждый тег:</h3>
@@ -105,12 +105,6 @@
         </ul>
         <h4>Заключение:</h4>
         <p>Теги <code>&lt;b&gt;</code>, <code>&lt;i&gt;</code>, <code>&lt;u&gt;</code>, и <code>&lt;s&gt;</code> полезны для стилизации текста, но их использование лучше ограничить случаями, когда требуется изменить визуальное восприятие текста без изменения его смысла. Для более логичного выделения текста рекомендуется использовать <code>&lt;strong&gt;</code>, <code>&lt;em&gt;</code>, и <code>&lt;del&gt;</code>, а визуальные изменения управлять через CSS.</p>
-        
-
-       
-
-
-
       </article>
     </main>
 
