--- a/pages/js.html
+++ b/pages/js.html
@@ -122,7 +122,7 @@
           <ul>
             <p><strong>День 3-4:</strong></p>
             <li><a class="pagesLinks" href="../pages/js/ch3-4.html">Введение в обработку ошибок</a></li>
-            <li>Конструкции try, catch, finally</li>
+            <li><a class="pagesLinks "href="../pages/js/ch3-5.html">Конструкции try, catch, finally</a></li>
             <li>Создание собственных ошибок (throw)</li>
           </ul>
 
