--- a/pages/js.html
+++ b/pages/js.html
@@ -186,7 +186,7 @@
 
           <ul>
             <p><strong>День 7:</strong></p>
-            <li>Практика: работа с API, получение данных и отображение их на странице</li>
+            <li><a class="pagesLinks" href="../pages/js/ch5-8.html">Практика: работа с API, получение данных и отображение их на странице</a></li>
           </ul>
 
         <h1>Часть 6: Завершение и проект</h1>
