--- a/pages/js/ch5-8.html
+++ b/pages/js/ch5-8.html
@@ -47,7 +47,120 @@
           <li><strong>PATCH</strong>: Частичное обновление данных.</li>
           <li><strong>DELETE</strong>: Удаление данных.</li>
         </ol>
-
+        <h3>3. Работа с Fetch API</h3>
+        <h4>Основы Fetch API</h4>
+        <p><code>fetch</code> — встроенный метод для выполнения HTTP-запросов. Возвращает объект <code>Promise</code>.</p>
+        <p>Синтаксис:</p>
+<pre>
+  <code class="lang-js">
+    fetch(url, options)
+      .then(response => response.json()) // Преобразование ответа в JSON
+      .then(data => console.log(data))  // Работа с данными
+      .catch(error => console.error('Ошибка:', error)); // Обработка ошибок
+  </code>
+</pre>
+        <p><strong>Пример запроса GET:</strong></p>
+<pre>
+  <code class="lang-js">
+    fetch('https://jsonplaceholder.typicode.com/posts')
+      .then(response => {
+        if (!response.ok) {
+          throw new Error('Ошибка сети');
+        }
+        return response.json();
+    })
+    .then(data => console.log(data))
+    .catch(error => console.error('Ошибка:', error));
+  </code>
+</pre>
+        <p>Пример запроса POST:</p>
+<pre>
+  <code class="lang-js">
+    fetch('https://jsonplaceholder.typicode.com/posts', {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json'
+      },
+      body: JSON.stringify({
+        title: 'Новая статья',
+        body: 'Текст статьи',
+        userId: 1
+      })
+    })
+    .then(response => response.json())
+    .then(data => console.log(data))
+    .catch(error => console.error('Ошибка:', error));
+  </code>
+</pre>
+        <h3>4. Асинхронный подход: async/await</h3>
+        <p>Для упрощения работы с промисами можно использовать <code>async/await</code>.</p>
+        <p>Пример:</p>
+<pre>
+  <code class="lang-js">
+    async function getData() {
+      try {
+        const response = await fetch('https://jsonplaceholder.typicode.com/posts');
+        if (!response.ok) {
+          throw new Error('Ошибка сети');
+        }
+        const data = await response.json();
+        console.log(data);
+      } catch (error) {
+          console.error('Ошибка:', error.message);
+      }
+    }
+    getData();
+  </code>
+</pre>
+        <h3>5. Обработка ошибок</h3>
+        <p>Важно учитывать возможные проблемы:</p>
+        <ol>
+          <li><strong>Сетевые ошибки</strong>: Отсутствие соединения, таймауты.</li>
+          <li><strong>Ошибки сервера</strong>: 5xx коды HTTP.</li>
+          <li><strong>Ошибки клиента</strong>: 4xx коды HTTP.</li>
+        </ol>
+        <p>Пример обработки ошибок:</p>
+<pre>
+  <code class="lang-js">
+    fetch('https://api.example.com/data')
+      .then(response => {
+        if (!response.ok) {
+          throw new Error(`Ошибка: ${response.status} ${response.statusText}`);
+        }
+        return response.json();
+    })
+    .catch(error => console.error('Сетевая ошибка:', error));
+  </code>
+</pre>
+        <h3>6. Отображение данных на странице</h3>
+        <h4>Пример: Получение списка и отображение в HTML</h4>
+        <p><strong>HTML:</strong></p>
+<pre>
+  <code class="lang-html">
+    &lt;div id="posts">&lt;/div>
+  </code>
+</pre>
+        <p><strong>JavaScript:</strong></p>
+<pre>
+  <code class="lang-js">
+    async function displayPosts() {
+      try {
+        const response = await fetch('https://jsonplaceholder.typicode.com/posts');
+        const posts = await response.json();
+        const postsContainer = document.getElementById('posts');
+          
+        posts.forEach(post => {
+          const postElement = document.createElement('div');
+          postElement.innerHTML = `&lt;h2>${post.title}&lt;/h2>&lt;p>${post.body}&lt;/p>`;
+          postsContainer.appendChild(postElement);
+        });
+      } catch (error) {
+          console.error('Ошибка:', error);
+      }
+    }
+    displayPosts();
+  </code>
+</pre>
        
 
 
