--- a/pages/js/ch5-8.html
+++ b/pages/js/ch5-8.html
@@ -73,7 +73,7 @@
     .catch(error => console.error('Ошибка:', error));
   </code>
 </pre>
-        <p>Пример запроса POST:</p>
+        <p><strong>Пример запроса POST:</strong></p>
 <pre>
   <code class="lang-js">
     fetch('https://jsonplaceholder.typicode.com/posts', {
@@ -161,10 +161,68 @@
     displayPosts();
   </code>
 </pre>
-       
-
-
-
+        <h3>7. CORS (Cross-Origin Resource Sharing)</h3>
+        <p>Иногда запросы к API блокируются из-за политики CORS. Для решения:</p>
+        <ul>
+          <li>Используйте прокси-сервер.</li>
+          <li>Убедитесь, что сервер поддерживает ваш домен.</li>
+        </ul>
+        <h3>8. Работа с авторизацией</h3>
+        <p>Некоторые API требуют авторизации. Чаще всего используются токены:</p>
+        <ul>
+          <li><strong>Bearer Token</strong>: Указывается в заголовке <code>Authorization</code>.</li>
+        </ul>
+        <p>Пример с токеном:</p>
+<pre>
+  <code class="lang-js">
+    fetch('https://api.example.com/secure-data', {
+      headers: {
+        'Authorization': 'Bearer YOUR_TOKEN'
+      }
+    })
+    .then(response => response.json())
+    .then(data => console.log(data))
+    .catch(error => console.error('Ошибка:', error));
+  </code>
+</pre>
+        <h3>9. Инструменты для тестирования API</h3>
+        <ul>
+          <li><strong>Postman</strong>: Удобный интерфейс для отправки запросов и просмотра ответов.</li>
+          <li><strong>cURL</strong>: Командная строка для запросов.</li>
+          <li><strong>Swagger</strong>: Документация и тестирование API.</li>
+        </ul>
+        <h3>10. Продвинутые темы</h3>
+        <h4>10.1. WebSocket</h4>
+        <p>Используется для связи в реальном времени.</p>
+<pre>
+  <code class="lang-js">
+    const socket = new WebSocket('ws://example.com/socket');
+    socket.onmessage = event => console.log('Получено:', event.data);
+  </code>
+</pre>
+        <h4>10.2. Работа с GraphQL</h4>
+        <p>GraphQL позволяет гибко запрашивать данные:</p>
+<pre>
+  <code class="lang-js">
+    const query = `
+  {
+      posts {
+        id
+        title
+        body
+      }
+  }`;
+  fetch('https://graphql.example.com', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ query })
+  })
+  .then(response => response.json())
+  .then(data => console.log(data));
+  </code>
+</pre>
+       <h3>Заключение</h3>
+       <p>Работа с API — это мощный инструмент, позволяющий взаимодействовать с данными из разных источников. Понимание HTTP, использование Fetch API, и управление асинхронным кодом — ключевые аспекты для успешной разработки современных веб-приложений.</p>
       </article>
     </main>
 
