--- a/pages/js.html
+++ b/pages/js.html
@@ -194,7 +194,7 @@
           <ul>
             <p><strong>День 1-2:</strong></p>
             <li>Повторение ключевых тем</li>
-            <li>Решение задач на алгоритмы и логику</li>
+            <li><a class="pagesLinks" href="../pages/js/ch6-2.html">Решение задач на алгоритмы и логику</a></li>
           </ul>
 
           <ul>
