--- a/pages/js/ch6-2.html
+++ b/pages/js/ch6-2.html
@@ -88,6 +88,48 @@
     console.log(isPrime(11)); // true
   </code>
 </pre>
+        <h3>3. Подходы к решению задач</h3>
+        <h4>3.1. Понять задачу</h4>
+        <ol>
+          <li>Прочитайте условия внимательно.</li>
+          <li>Разберите примеры, если они есть.</li>
+          <li>Уточните ограничения (размеры входных данных, диапазоны чисел).</li>
+        </ol>
+        <h4>3.2. Разбить задачу на подзадачи</h4>
+        <p>Например, задача "Найти все уникальные символы строки" может быть разбита так:</p>
+        <ol>
+          <li>Итерировать по строке.</li>
+          <li>Проверить, встречался ли символ ранее.</li>
+          <li>Сохранить уникальные символы.</li>
+        </ol>
+        <h4>3.3. Выбрать структуру данных</h4>
+        <ul>
+          <li>Массивы: для работы с последовательностями данных.</li>
+          <li>Объекты или Map: для подсчёта частоты элементов.</li>
+          <li>Множества (Set): для фильтрации уникальных значений.</li>
+        </ul>
+        <h3>4. Алгоритмические техники</h3>
+        <h3>4.1. Жадные алгоритмы</h3>
+        <p>Ищут локально оптимальное решение на каждом шаге, чтобы прийти к глобально оптимальному. Пример: Задача о сдаче монет.</p>
+        <h4>4.2. Разделяй и властвуй</h4>
+        <p>Разделяйте задачу на меньшие части, решайте их, а затем объединяйте результаты. Пример: Быстрая сортировка.</p>
+        <h4>4.3. Динамическое программирование</h4>
+        <p>Используется для задач, где большие проблемы можно разбить на перекрывающиеся подзадачи. Пример: Задача о рюкзаке.</p>
+        <p>Пример динамического программирования:</p>
+<pre>
+  <code class="lang-js">
+    const fibonacci = n => {
+      const dp = [0, 1];
+      for (let i = 2; i <= n; i++) {
+        dp[i] = dp[i - 1] + dp[i - 2];
+      }
+      return dp[n];
+    };
+    console.log(fibonacci(10)); // 55
+  </code>
+</pre>
+        <h4>4.4. Поиск с возвратом (Backtracking)</h4>
+        <p>Используется для поиска всех возможных решений задачи. Например, задачи о восьми ферзях.</p>
        
 
 
