--- a/pages/js/ch6-2.html
+++ b/pages/js/ch6-2.html
@@ -130,6 +130,47 @@
 </pre>
         <h4>4.4. Поиск с возвратом (Backtracking)</h4>
         <p>Используется для поиска всех возможных решений задачи. Например, задачи о восьми ферзях.</p>
+        <h3>5. Важные алгоритмы</h3>
+        <h4>5.1. Сортировки</h4>
+        <ul>
+          <li><strong>Пузырьковая.</strong></li>
+          <li><strong>Быстрая (QuickSort).</strong></li>
+          <li><strong>Слиянием (MergeSort).</strong></li>
+        </ul>
+        <p>Пример быстрой сортировки:</p>
+<pre>
+  <code class="lang-js">
+    const quickSort = arr => {
+      if (arr.length <= 1) return arr;
+      const pivot = arr[arr.length - 1];
+      const left = arr.filter(el => el < pivot);
+      const right = arr.filter(el => el > pivot);
+      return [...quickSort(left), pivot, ...quickSort(right)];
+    };
+    console.log(quickSort([3, 1, 4, 1, 5])); // [1, 1, 3, 4, 5]
+  </code>
+</pre>
+        <h4>5.2. Поиск</h4>
+        <ul>
+          <li><strong>Линейный поиск.</strong></li>
+          <li><strong>Бинарный поиск</strong> (только для отсортированных массивов).</li>
+        </ul>
+        <p>Пример бинарного поиска:</p>
+<pre>
+  <code class="lang-js">
+    const binarySearch = (arr, target) => {
+      let left = 0, right = arr.length - 1;
+      while (left <= right) {
+        const mid = Math.floor((left + right) / 2);
+        if (arr[mid] === target) return mid;
+        if (arr[mid] < target) left = mid + 1;
+        else right = mid - 1;
+      }
+      return -1;
+    };
+  console.log(binarySearch([1, 2, 3, 4, 5], 3)); // 2
+  </code>
+</pre>
        
 
 
