--- a/pages/js/ch6-2.html
+++ b/pages/js/ch6-2.html
@@ -294,6 +294,56 @@
     console.log(moveZeroes([0, 1, 0, 3, 12])); // [1, 3, 12, 0, 0]
   </code>
 </pre>
+        <h3>3. Задачи на числа</h3>
+        <h4>3.1. Сумма цифр числа</h4>
+        <p>Найти сумму всех цифр числа.</p>
+<pre>
+  <code class="lang-js">
+    const sumDigits = num => {
+      return num.toString().split('').reduce((sum, digit) => sum + Number(digit), 0);
+    };
+    console.log(sumDigits(1234)); // 10
+  </code>
+</pre>
+        <h4>3.2. Проверка числа на палиндром</h4>
+        <p>Проверить, является ли число палиндромом.</p>
+<pre>
+  <code class="lang-js">
+    const isPalindrome = num => {
+      const str = num.toString();
+      return str === str.split('').reverse().join('');
+    };
+    console.log(isPalindrome(121)); // true
+    console.log(isPalindrome(123)); // false
+  </code>
+</pre>
+        <h4>3.3. НОД двух чисел</h4>
+        <p>Найти наибольший общий делитель (НОД) двух чисел.</p>
+<pre>
+  <code class="lang-js">
+    const gcd = (a, b) => {
+      while (b !== 0) {
+        [a, b] = [b, a % b];
+      }
+      return a;
+    };
+    console.log(gcd(56, 98)); // 14
+  </code>
+</pre>
+        <h4>3.4. Проверка на число Армстронга</h4>
+        <p>Число Армстронга — это число, сумма цифр которого в степени длины числа равна самому числу.</p>
+<pre>
+  <code class="lang-js">
+    const isArmstrong = num => {
+      const str = num.toString();
+      const length = str.length;
+      const sum = str.split('').reduce((acc, digit) => acc + Math.pow(Number(digit), length), 0);
+      return sum === num;
+    };
+    console.log(isArmstrong(153)); // true
+    console.log(isArmstrong(123)); // false
+  </code>
+</pre>
 
 
       </article>
